2006-07-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* configure.in: 
	* tests/Makefile.am: 
	* tests/test-widget.c: 
	Added gnomevfs for test-widget back (optionally).
	* gtksourceview/gtksourcecontextengine.[ch]:
	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguage-parser-1.c:
	* gtksourceview/gtksourcelanguage-private.h:
	* gtksourceview/Makefile.am:
	Use old lang files with new engine.

2006-07-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: 
	(create_child_context): do not add extra reference to context,
	so the parent does not own a reference to it and it is actually
	freed when no segments are using it.

2006-07-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourceengine.[ch]:
	* gtksourceview/gtksourcebuffer.[ch]: replaced 
	GtkSourceBuffer::update-highlight" signal with 
	_gtk_source_buffer_update_highlight() function,
	and added GtkSourceEngine.update_highlight method.
	* gtksourceview/gtksourceview-marshal.list:
	removed VOID:BOXED,BOXED,BOOLEAN which is not needed anymore.
	* gtksourceview/gtksourcecontextengine.c: 
	(regex_match_simple): new function;
	(regex_new), (context_definition_new): use it here.
	Refactored code so that text_inserted and text_deleted
	only update invalid region, and update_syntax then uses
	it to modify the tree.
	* tests/test-widget.c: unset language when language is not
	found for opened file.

2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (regex_new):
	prevent using \C (single byte match) in patterns.

2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: added a timer to
	update_syntax().

2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>

	* autogen.sh: don't use --enable-gtk-doc by default.
	* gtksourceview/gtksourcecontextengine.c: keep an invalid region
	instead of invalidating tail of buffer.

2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>
